style.css
/* ... */
/*
		
		FONTS DEMO FOR USE
		-------------------

		h1.fontface {font: 60px/68px 'SilkscreenNormal', Arial, sans-serif;letter-spacing: 0;}

		p.style1 {font: 18px/27px 'SilkscreenNormal', Arial, sans-serif;}
		p.style2 {font: 18px/27px 'SilkscreenBold', Arial, sans-serif;}
		p.style3 {font: 18px/27px 'SilkscreenExpandedNormal', Arial, sans-serif;}
		p.style4 {font: 18px/27px 'SilkscreenExpandedBold', Arial, sans-serif;}

*/

ul,p,dl,hr,h1,h2,h3,h4,h5,h6,pre,table,address,fieldset, blockquote {
	margin-bottom: 20px;
}

.clear {
	float: none;
	padding: 0;
	margin: 0;
	overflow: hidden;
	display: block;
	clear: both;
}

.clearfix:after {
	content: ".";
	display: block;
	clear: both;
	visibility: hidden;
	line-height: 0;
	height: 0;
}
 
.clearfix {
	display: inline-block;
}

body {
	overflow-x: hidden;
	padding: 0;
	margin: 0;
	font: 12px/16px 'Be Vietnam Pro', 'SilkscreenBold', Arial, sans-serif;
	cursor: url('images/cursor.cur'), auto;
}

nav {
	position: fixed;
	top: -85px;
	height: 55px;
	left: 50%;
	width: 960px;
	margin: 10px 0 0 -480px;
	text-align: center;	
	color: #fff;
	z-index: 800;
	border: 3px solid #ffffff;
	border-radius: 30px;		
	background: #4f2e26;
	background: -moz-linear-gradient(top,  #4f2e26 0%, #2A1410 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4f2e26), color-stop(100%,#2A1410));
	background: -webkit-linear-gradient(top,  #4f2e26 0%,#2A1410 100%);
	background: -o-linear-gradient(top,  #4f2e26 0%,#2A1410 100%);
	background: -ms-linear-gradient(top,  #4f2e26 0%,#2A1410 100%);
	background: linear-gradient(top,  #4f2e26 0%,#2A1410 100%);	
	text-shadow: 0px -1px 0px rgba(000,000,000,0.2), 0px 1px 0px rgba(255,255,255,0.3);		
	box-shadow: inset 0px 0px 1px rgba(014,138,196,1), 0 2px 5px rgba(0,0,0,0.4);
	transition: top 0.4s ease-in-out 0s;
}

nav.show {
	top: 0;
}

nav ul {
	width: 100%;
	padding-left: 30px;
}

nav a {
	float: left;
	padding: 20px;
	color: #fff;
	text-decoration: none;
	border-left: 1px solid transparent;
	border-right: 1px solid transparent;
	text-shadow: 1px 1px 0 #000;
}

nav a:hover, nav a.current {
	background: rgba(0,0,0,0.3);
	border-left: 1px solid rgba(0,0,0,0.1);
	border-right: 1px solid rgba(255,255,255,0.1);
}

nav li.last a {
	float: right;
	margin-right: 30px;
	padding: 10px;
	margin: 13px 45px 10px 10px;
	width: 10px;
	height: 10px;
}

nav li.last a:hover {
	border-radius: 50em;
}

#wrapper {
	border: 1px solid #c7c7c7;
	margin: 0 auto;
	width: 100%;
	height: 2500px;
	position: relative;
	background: url(images/bg.png) repeat;
	overflow: hidden;
}

#myInfo {
	position: absolute;
	top: 200px;
	left: 20px;
}

#myInfo h1 {
	font-family: 'VT323', 'Space Mono', monospace;
	font-size: 56px;
	line-height: 1.05;
	letter-spacing: 2px;
	color: #0f754f;
	text-shadow: 2px 2px 0 #ffffff, -1px -1px 0 rgba(0,0,0,0.2), 0 3px 5px rgba(0,0,0,0.3);
	margin-bottom: 6px;
	text-transform: uppercase;
}

#myInfo h2 {
	font: 14px/22px 'Be Vietnam Pro', Arial, sans-serif;
	font-weight: 500;
	margin-left: 7px;
	letter-spacing: 2px;
	text-transform: uppercase;
	color: #2a5c3a;
}

/* Start Text */

#startText {
	position: absolute;
	top: 140px;
	left: 50%;
	width: 240px;
	margin: 0 0 0 -120px;
	z-index: 20;
	text-align: center;
	font-family: 'Be Vietnam Pro', Arial, sans-serif;
	font-size: 12px;
	line-height: 1.6;
	-webkit-animation: fade 2.5s ease infinite;
	-moz-animation: fade 2.5s ease infinite;
	animation: fade 2.5s ease infinite;
}

#startText img {
	width: 80px;
	display: block;
	margin: 0 auto 5px;
	padding-right: 4px;
}

@-webkit-keyframes fade {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-moz-keyframes fade {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-keyframes fade {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 1;	
	}
}

/* View */

.cave {
	position: absolute;
	left: 0;
	background: url(images/caveBG.png) repeat;
	width: 100%;
	z-index: 50;
}

.caveHole {
	position: absolute;
	left: 50%;
	width: 50px;
	background: rgba(0,0,0,0.8);
	border: 1px solid rgba(255,255,255,0.3);
	border-radius: 10px 10px 0 0;
	margin: 0 0 0 -25px;
	z-index: 52;	
}

.caveHoleTrack {
	position: absolute;
	left: 50%;
	width: 200px;
	background: url(images/caveBG.png) repeat;
	margin: 0 0 0 -100px;
	z-index: 54;
}

.sea {
	position: absolute;
	left: 0;
	background: url(images/sea.png) repeat;
	width: 100%;
	z-index: 50;
}

.bridge {
	position: absolute;
	left: 50%;
	width: 210px;
	background: url(images/bridge.png) repeat-y;
	margin: 0 0 0 -105px;
	z-index: 52;
}

#startCave {
	top: 0;
	height: 100px;
}

#startCave::after {
	position: absolute;
	bottom: -23px;
	left: 0;
	background: url(images/caveBottomBG.png) repeat;
	height: 32px;
	width: 100%;
	z-index: 51;
	content: "";
	box-shadow: 0 5px 5px rgba(0,0,0,0.3);
}

#startCaveHole {
	top: 94px;
	border-bottom: none;
	height: 28px;
}

#startCaveHoleTrack {
	top: 0;
	height: 92px;
}

#endSea {
	bottom: 0;
	height: 800px;
	-webkit-animation: seamove 6s linear infinite;
	-moz-animation: seamove 6s linear infinite;
	animation: seamove 6s linear infinite;
}

@-webkit-keyframes seamove {
	0% {
		background-position: 0 0;
	}
	100% {
		background-position: 65px 0;
	}
}

@-moz-keyframes seamove {
	0% {
		background-position: 0 0;
	}
	100% {
		background-position: 65px 0;
	}
}

@-keyframes seamove {
	0% {
		background-position: 0 0;
	}
	100% {
		background-position: 65px 0;
	}
}

#endSea::after {
	position: absolute;
	top: 0px;
	left: 0;
	background: url(images/seaStart.png) repeat center bottom;
	height: 9px;
	width: 100%;
	z-index: 51;
	content: "";
	box-shadow: 0 4px 3px rgba(0,0,0,0.3);
}
/* ... */

